--- a/pfjax.ipynb
+++ b/pfjax.ipynb
@@ -6,6 +6,21 @@
    "source": [
     "# Particle Filter with JAX\n",
     "\n",
+    "**Martin Lysy, University of Waterloo**\n",
+    "\n",
+    "**November 11, 2021**\n",
+    "\n",
+    "## Summary\n",
+    "\n",
+    "The goal is to provide a fast implementation of a particle filter to estimate the marginal likelihood of a state-space model,\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\mathcal{L}(\\theta) & = p(y_{1:T} \\mid \\theta) \\\\\n",
+    "& = \\int \\prod_{t=1}^T p(y_t \\mid x_t, \\theta) \\times \\prod_{t=1}^T p(x_t \\mid x_{t-1}, \\theta) \\times p(x_0 \\mid \\theta)\\, d x_{0:T},   \n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "along with its gradient, $\\nabla \\mathcal{L}(\\theta) = \\frac{\\partial}{\\partial \\theta} \\mathcal{L}(\\theta)$.  The [**JAX**](https://github.com/google/jax) library is used to efficiently compose jit and autodiff operations  in order to achieve this.\n",
+    "\n",
     "## Notation\n",
     "\n",
     "### Functions\n",
@@ -18,9 +33,29 @@
     "### Dimensions\n",
     "\n",
     "- `n_obs`: Number of time points.\n",
-    "- `n_state`: Number of state dimensions.\n",
-    "- `n_meas`: Number of measured dimensions.\n",
-    "- `n_particle`: Number of particles."
+    "- `n_particle`: Number of particles.\n",
+    "- `n_state`: Tuple of state dimensions.\n",
+    "- `n_meas`: Tuple of measured dimensions.\n",
+    "\n",
+    "## TODO\n",
+    "\n",
+    "- Test against true BM likelihood.\n",
+    "\n",
+    "- Example where `n_state` and `n_meas` are not scalar.  This can be SDE with `n_res > 1`.\n",
+    "\n",
+    "- Interface for supplying new models to generic PF code.  Specifically, if we have `import pfjax as pfj` then we may need to JIT something like \n",
+    "\n",
+    "    ```python\n",
+    "    def my_pf(theta):\n",
+    "        out = pfj.particle_filter(y_meas, theta, n_particles,\n",
+    "                                  my_state_sample, my_meas_lpdf,\n",
+    "                                  *args, **kwargs)\n",
+    "        return pfj.particle_loglik(out)\n",
+    "    ```\n",
+    "    \n",
+    "- Add arbitrary prior specification $p(x_0 \\mid \\theta)$.  Should also be able to specify $x_0$ directly to calculate the marginal likelihood $\\mathcal{L}(x_0, \\theta) = p(y_{1:T} \\mid x_0, \\theta)$.\n",
+    "\n",
+    "- Add arbitrary proposal distribution $q(x_t \\mid x_{t-1}, \\theta)$."
    ]
   },
   {
@@ -895,6 +930,58 @@
    ],
    "source": [
     "(116 * 1e-3) / (67.2 * 1e-6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test against exact likelihood\n",
+    "\n",
+    "The Brownian latent variables $x_{1:T}$ are multivariate normal with\n",
+    "$$\n",
+    "\\newcommand{\\cov}{\\operatorname{cov}}\n",
+    "\\begin{aligned}\n",
+    "%E[x_0 \\mid \\theta] & = y_0 & \\var(x_0\\\\\n",
+    "E[x_t \\mid x_0, \\theta] & = x_0 + \\mu t, \\\\\n",
+    "\\cov(x_s, x_t \\mid x_0, \\theta) & = \\sigma^2 \\min(s, t).\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "The measurement variables $y_{1:T}$ are multivariate normal with\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "E[y_t \\mid x_{0:T}, \\theta] & = x_{1:T}, \\\\\n",
+    "\\cov(y_s, y_t \\mid x_{0:T}, \\theta) & = \\tau^2 \\delta_{st}.\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "Therefore, the marginal distribution of $y_{1:T}$ is multivariate normal with\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "E[y_t \\mid x_0, \\theta] & = x_0 + \\mu t, \\\\\n",
+    "\\cov(y_s, y_t \\mid x_0, \\theta) & = \\sigma^2 \\min(s, t) + \\tau^2 \\delta_{st}.\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "Currently, the implementation assumes the prior $x_0 \\sim \\N(y_0, \\tau^2)$ for some initial observation $y_0$.  Integrating over $x_0$, the marginal distribution of $y_{1:T}$ is MVN with\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "E[y_t \\mid \\theta] & = y_0 + \\mu t, \\\\\n",
+    "\\cov(y_s, y_t \\mid \\theta) & = \\sigma^2 \\min(s, t) + \\tau^2(\\delta_{st} + 1).\n",
+    "\\end{aligned}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def bm_loglik(y_meas, theta):\n",
+    "    mu = theta[0]\n",
+    "    sigma = theta[1]\n",
+    "    tau = theta[2]\n",
+    "    \n",
+    "    "
    ]
   },
   {
