added init to numpy version

--- a/pfjax.ipynb
+++ b/pfjax.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
     "        x_curr: State variable at current time `t`.\n",
     "        theta: Parameter value.\n",
     "\n",
-    "    Returns\n",
+    "    Returns:\n",
     "        The log-density of `p(x_curr | x_prev, theta)`.\n",
     "    \"\"\"\n",
     "    tau = theta[2]\n",
@@ -174,12 +174,56 @@
     "        Sample of the measurement variable at current time `t`: `y_curr ~ p(y_curr | x_curr, theta)`.\n",
     "    \"\"\"\n",
     "    tau = theta[2]\n",
-    "    return sp.stats.norm.rvs(loc=x_curr, scale=tau)\n"
+    "    return sp.stats.norm.rvs(loc=x_curr, scale=tau)\n",
+    "\n",
+    "\n",
+    "def init_logw(x_init, y_init, theta):\n",
+    "    \"\"\"\n",
+    "    Log-weight of the importance sampler for initial state variable `x_init`.\n",
+    "\n",
+    "    Suppose that \n",
+    "    ```\n",
+    "    x_init ~ q(x_init) = q(x_init | y_init, theta)\n",
+    "    ```\n",
+    "    Then function returns\n",
+    "    ```\n",
+    "    logw = log p(x_init | theta) - log q(x_init)\n",
+    "    ```\n",
+    "\n",
+    "    Args:\n",
+    "        x_init: State variable at initial time `t = 0`.\n",
+    "        y_init: Measurement variable at initial time `t = 0`.\n",
+    "        theta: Parameter value.\n",
+    "\n",
+    "    Returns:\n",
+    "        The log-weight of the importance sampler for `x_init`.\n",
+    "    \"\"\"\n",
+    "    return -meas_lpdf(x_init, y_init, theta)\n",
+    "\n",
+    "\n",
+    "def init_sample(y_init, theta):\n",
+    "    \"\"\"\n",
+    "    Sampling distribution for initial state variable `x_init`. \n",
+    "\n",
+    "    Samples from an importance sampling proposal distribution\n",
+    "    ```\n",
+    "    x_init ~ q(x_init) = q(x_init | y_init, theta)\n",
+    "    ```\n",
+    "    See `init_logw()` for details.\n",
+    "\n",
+    "    Args:\n",
+    "        y_init: Measurement variable at initial time `t = 0`.\n",
+    "        theta: Parameter value.\n",
+    "\n",
+    "    Returns:\n",
+    "        Sample from the proposal distribution for `x_init`.\n",
+    "    \"\"\"\n",
+    "    return meas_sample(y_init, theta)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,9 +323,13 @@
     "    # initial time point\n",
     "    # FIXME: Hard-coded flat prior on x_0.  Make this more general.\n",
     "    for i_part in range(n_particles):\n",
-    "        X_particles[0, i_part, :] = meas_sample(y_meas[0, :], theta)\n",
+    "        # X_particles[0, i_part, :] = meas_sample(y_meas[0, :], theta)\n",
+    "        X_particles[0, i_part] = init_sample(y_meas[0], theta)\n",
     "        # sample directly from posterior p(x_0 | y_0, theta)\n",
-    "        logw_particles[0, i_part] = 0.\n",
+    "        # logw_particles[0, i_part] = 0.\n",
+    "        logw_particles[0, i_part] = \\\n",
+    "            init_logw(X_particles[0, i_part], y_meas[0], theta) + \\\n",
+    "            meas_lpdf(y_meas[0], X_particles[0, i_part], theta)\n",
     "    # subsequent time points\n",
     "    for t in range(1, n_obs):\n",
     "        # resampling step\n",
@@ -349,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -359,138 +407,138 @@
      "output_type": "stream",
      "text": [
       "y_meas = \n",
-      " [[0.76371425]\n",
-      " [0.88715404]\n",
-      " [1.10640127]\n",
-      " [1.36352618]\n",
-      " [1.95148437]]\n",
+      " [[0.38953797]\n",
+      " [1.09111296]\n",
+      " [1.16288667]\n",
+      " [1.41081302]\n",
+      " [2.03789537]]\n",
       "x_state = \n",
-      " [[0.66073978]\n",
-      " [0.78324502]\n",
-      " [0.95774334]\n",
-      " [1.35223807]\n",
-      " [1.95785123]]\n",
+      " [[0.41163897]\n",
+      " [1.03657141]\n",
+      " [1.09872739]\n",
+      " [1.4781646 ]\n",
+      " [2.22382917]]\n",
       "pf_out = \n",
-      " {'X_particles': array([[[0.77350637],\n",
-      "        [0.61849112],\n",
-      "        [0.78837221],\n",
-      "        [0.69694015],\n",
-      "        [0.75922677],\n",
-      "        [0.61105708],\n",
-      "        [0.81612899]],\n",
+      " {'X_particles': array([[[0.42227455],\n",
+      "        [0.49750695],\n",
+      "        [0.34999457],\n",
+      "        [0.40011497],\n",
+      "        [0.35936156],\n",
+      "        [0.39703985],\n",
+      "        [0.50982508]],\n",
       "\n",
-      "       [[1.33094042],\n",
-      "        [0.83430704],\n",
-      "        [1.72074152],\n",
-      "        [1.00563761],\n",
-      "        [1.37481499],\n",
-      "        [0.7076549 ],\n",
-      "        [0.93824445]],\n",
+      "       [[1.53510258],\n",
+      "        [0.95533996],\n",
+      "        [0.61115703],\n",
+      "        [0.34011676],\n",
+      "        [0.54578525],\n",
+      "        [0.90964064],\n",
+      "        [0.65043268]],\n",
       "\n",
-      "       [[1.46630755],\n",
-      "        [1.76465845],\n",
-      "        [1.56231864],\n",
-      "        [1.49361636],\n",
-      "        [1.20354607],\n",
-      "        [1.34611214],\n",
-      "        [1.7137133 ]],\n",
+      "       [[1.22217068],\n",
+      "        [1.63114762],\n",
+      "        [1.33450732],\n",
+      "        [0.95923545],\n",
+      "        [1.48154022],\n",
+      "        [1.60496695],\n",
+      "        [1.92627291]],\n",
       "\n",
-      "       [[1.77178989],\n",
-      "        [2.2083558 ],\n",
-      "        [1.99854547],\n",
-      "        [1.53933115],\n",
-      "        [1.86793308],\n",
-      "        [1.66248025],\n",
-      "        [1.62665892]],\n",
+      "       [[2.14648214],\n",
+      "        [1.72210958],\n",
+      "        [1.40558893],\n",
+      "        [1.9854277 ],\n",
+      "        [1.5459206 ],\n",
+      "        [1.9357483 ],\n",
+      "        [1.39344879]],\n",
       "\n",
-      "       [[2.20552559],\n",
-      "        [2.04343909],\n",
-      "        [1.87094663],\n",
-      "        [2.28008091],\n",
-      "        [2.04926174],\n",
-      "        [2.60712631],\n",
-      "        [2.51485203]]]), 'logw_particles': array([[  0.        ,   0.        ,   0.        ,   0.        ,\n",
+      "       [[1.84598046],\n",
+      "        [1.38689983],\n",
+      "        [2.2325566 ],\n",
+      "        [2.29724281],\n",
+      "        [1.98086157],\n",
+      "        [2.41074089],\n",
+      "        [2.03502674]]]), 'logw_particles': array([[  0.        ,   0.        ,   0.        ,   0.        ,\n",
       "          0.        ,   0.        ,   0.        ],\n",
-      "       [ -8.46367107,   1.24400632, -33.35975834,   0.68172872,\n",
-      "        -10.50701381,  -0.22735043,   1.25313504],\n",
-      "       [ -5.09297982, -20.28147908,  -9.00938577,  -6.11312985,\n",
-      "          0.91179095,  -1.48941863, -17.05774859],\n",
-      "       [ -6.95031643, -34.30320751, -18.77882868,  -0.16172279,\n",
-      "        -11.33766953,  -3.0850303 ,  -2.07829546],\n",
-      "       [ -1.84320045,   0.960863  ,   1.05933016,  -4.01513772,\n",
-      "          0.90562583, -20.10967104, -14.48550963]]), 'ancestor_particles': array([[-1, -1, -1, -1, -1, -1, -1],\n",
-      "       [ 1,  3,  2,  1,  6,  5,  3],\n",
-      "       [ 1,  1,  6,  1,  1,  5,  6],\n",
-      "       [ 5,  4,  4,  4,  5,  4,  4],\n",
-      "       [ 3,  3,  3,  3,  6,  3,  3]])}\n",
+      "       [ -8.4726925 ,   0.46193121, -10.13423801, -26.81611812,\n",
+      "        -13.48546899,  -0.26296369,  -8.32630874],\n",
+      "       [  1.20791687,  -9.5797693 ,  -0.08903583,  -0.69004438,\n",
+      "         -3.6933576 ,  -8.38810212, -27.75428107],\n",
+      "       [-25.67680643,  -3.4616307 ,   1.38228201, -15.12545486,\n",
+      "          0.47094368, -12.39420584,   1.36857074],\n",
+      "       [ -0.45791997, -19.80611302,  -0.51100314,  -1.97940815,\n",
+      "          1.22100385,  -5.56704273,   1.38323511]]), 'ancestor_particles': array([[-1, -1, -1, -1, -1, -1, -1],\n",
+      "       [ 0,  0,  0,  4,  0,  0,  1],\n",
+      "       [ 1,  5,  1,  5,  5,  1,  1],\n",
+      "       [ 0,  2,  0,  0,  0,  3,  3],\n",
+      "       [ 6,  6,  2,  2,  6,  2,  4]])}\n",
       "pf_loglik = \n",
-      " 7.344373664014883\n",
+      " 8.794732119309781\n",
       "X_state = \n",
-      " [[[0.69694015]\n",
-      "  [0.83430704]\n",
-      "  [1.20354607]\n",
-      "  [1.53933115]\n",
-      "  [1.87094663]]\n",
+      " [[[0.42227455]\n",
+      "  [0.95533996]\n",
+      "  [1.22217068]\n",
+      "  [1.5459206 ]\n",
+      "  [2.03502674]]\n",
       "\n",
-      " [[0.69694015]\n",
-      "  [0.83430704]\n",
-      "  [1.20354607]\n",
-      "  [1.62665892]\n",
-      "  [2.04926174]]\n",
+      " [[0.42227455]\n",
+      "  [0.95533996]\n",
+      "  [1.22217068]\n",
+      "  [1.5459206 ]\n",
+      "  [2.03502674]]\n",
       "\n",
-      " [[0.69694015]\n",
-      "  [0.83430704]\n",
-      "  [1.20354607]\n",
-      "  [1.53933115]\n",
-      "  [1.87094663]]\n",
+      " [[0.42227455]\n",
+      "  [0.95533996]\n",
+      "  [1.22217068]\n",
+      "  [1.40558893]\n",
+      "  [2.2325566 ]]\n",
       "\n",
-      " [[0.69694015]\n",
-      "  [0.83430704]\n",
-      "  [1.20354607]\n",
-      "  [1.53933115]\n",
-      "  [2.04343909]]\n",
+      " [[0.42227455]\n",
+      "  [0.95533996]\n",
+      "  [1.22217068]\n",
+      "  [1.5459206 ]\n",
+      "  [2.03502674]]\n",
       "\n",
-      " [[0.69694015]\n",
-      "  [0.83430704]\n",
-      "  [1.20354607]\n",
-      "  [1.62665892]\n",
-      "  [2.04926174]]\n",
+      " [[0.42227455]\n",
+      "  [0.90964064]\n",
+      "  [0.95923545]\n",
+      "  [1.39344879]\n",
+      "  [1.84598046]]\n",
       "\n",
-      " [[0.69694015]\n",
-      "  [0.83430704]\n",
-      "  [1.20354607]\n",
-      "  [1.53933115]\n",
-      "  [1.87094663]]\n",
+      " [[0.42227455]\n",
+      "  [0.95533996]\n",
+      "  [1.22217068]\n",
+      "  [1.5459206 ]\n",
+      "  [2.03502674]]\n",
       "\n",
-      " [[0.69694015]\n",
-      "  [0.83430704]\n",
-      "  [1.20354607]\n",
-      "  [1.53933115]\n",
-      "  [1.87094663]]\n",
+      " [[0.42227455]\n",
+      "  [0.90964064]\n",
+      "  [0.95923545]\n",
+      "  [1.39344879]\n",
+      "  [1.98086157]]\n",
       "\n",
-      " [[0.69694015]\n",
-      "  [0.83430704]\n",
-      "  [1.20354607]\n",
-      "  [1.62665892]\n",
-      "  [2.04926174]]\n",
+      " [[0.42227455]\n",
+      "  [0.90964064]\n",
+      "  [0.95923545]\n",
+      "  [1.39344879]\n",
+      "  [1.98086157]]\n",
       "\n",
-      " [[0.69694015]\n",
-      "  [0.83430704]\n",
-      "  [1.20354607]\n",
-      "  [1.62665892]\n",
-      "  [2.04926174]]\n",
+      " [[0.42227455]\n",
+      "  [0.90964064]\n",
+      "  [0.95923545]\n",
+      "  [1.39344879]\n",
+      "  [1.98086157]]\n",
       "\n",
-      " [[0.69694015]\n",
-      "  [0.83430704]\n",
-      "  [1.20354607]\n",
-      "  [1.53933115]\n",
-      "  [1.87094663]]\n",
+      " [[0.42227455]\n",
+      "  [0.95533996]\n",
+      "  [1.22217068]\n",
+      "  [1.5459206 ]\n",
+      "  [2.03502674]]\n",
       "\n",
-      " [[0.69694015]\n",
-      "  [0.83430704]\n",
-      "  [1.20354607]\n",
-      "  [1.62665892]\n",
-      "  [2.04926174]]]\n"
+      " [[0.42227455]\n",
+      "  [0.95533996]\n",
+      "  [1.22217068]\n",
+      "  [1.40558893]\n",
+      "  [2.2325566 ]]]\n"
      ]
     }
    ],
