added sde lotvol_model but not tested

--- a/pfjax.ipynb
+++ b/pfjax.ipynb
@@ -66,7 +66,14 @@
     "    step_logw(x_curr, x_prev, t, theta)\n",
     "    ```\n",
     "    \n",
-    "    instead of e.g., `state_prop_lpdf()`, `state_targ_lpdf()` and `meas_lpdf()` which gets assembled internally for the user.  This is what was done in [**SMCTC**](https://warwick.ac.uk/fac/sci/statistics/staff/academic-research/johansen/smctc/).  But what are the right args to these functions?  Sort of depends if they know about the \"global\" `y_meas`..."
+    "    instead of e.g., `state_prop_lpdf()`, `state_targ_lpdf()` and `meas_lpdf()` which gets assembled internally for the user.  This is what was done in [**SMCTC**](https://warwick.ac.uk/fac/sci/statistics/staff/academic-research/johansen/smctc/).  But what are the right args to these functions?  Sort of depends if they know about the \"global\" `y_meas`.  I think the right compromise is:\n",
+    "    \n",
+    "    ```python\n",
+    "    step_sample(x_prev, y_curr, t, theta)\n",
+    "    step_logw(x_curr, x_prev, y_curr, t, theta)\n",
+    "    ```\n",
+    "    \n",
+    "    In other words, can use `y_curr` for an optimal filter, can support non-homogeneous state-space models via `t`, and anything more complicated will require globals."
    ]
   },
   {
