implemented and documented custom proposal pf.  updated bm_model with this interface.

--- a/pfjax.ipynb
+++ b/pfjax.ipynb
@@ -21,6 +21,48 @@
     "$$\n",
     "along with its gradient, $\\nabla \\mathcal{L}(\\theta) = \\frac{\\partial}{\\partial \\theta} \\mathcal{L}(\\theta)$.  The [**JAX**](https://github.com/google/jax) library is used to efficiently compose jit and autodiff operations  in order to achieve this.\n",
     "\n",
+    "## API\n",
+    "\n",
+    "For given $\\theta$, the particle filter begins by running an importance sampler for $p(x_0 \\mid y_0, \\theta)$.  In order to do this, the user supplies a sampling proposal distribution,\n",
+    "\n",
+    "$$\n",
+    "x_0 \\sim q(x_0 \\mid y_0, \\theta),\n",
+    "$$\n",
+    "\n",
+    "along with a function to calculate the importance log weights,\n",
+    "\n",
+    "$$\n",
+    "w(x_0 \\mid y_0, \\theta) = \\log p(y_0 \\mid x_0, \\theta) + \\log p(x_0 \\mid \\theta) - \\log q(x_0 \\mid y_0, \\theta).\n",
+    "$$\n",
+    "\n",
+    "Since sampling from $q(x_0 \\mid y_0, \\theta)$ and computing $w(x_0 \\mid y_0, \\theta)$ involve many shared calculations, **pfjax** requires both to be performed in a single function:\n",
+    "\n",
+    "```python\n",
+    "def pf_init(y_init, theta, key):\n",
+    "    # calculate x_init and logw\n",
+    "    return (x_init, logw)\n",
+    "```\n",
+    "\n",
+    "Now suppose we have run the particle filter until step $t-1$.  In other words, the input is a weighted set of particles $((x_{t-1}^{(1)}, w_{t-1}^{(1)}), \\ldots, (x_{t-1}^{(B)}, w_{t-1}^{(B)}))$ representing the distribution $p(x_{t-1} \\mid y_{0:t-1}, \\theta)$.  In order to get to a weighted set of particles representing $p(x_t \\mid y_t, \\theta)$, the user suppliles a sampling proposal distribution\n",
+    "\n",
+    "$$\n",
+    "x_t \\sim q(x_t \\mid x_{t-1}, y_t, \\theta)\n",
+    "$$\n",
+    "\n",
+    "and a log-weight function\n",
+    "\n",
+    "$$\n",
+    "w(x_t \\mid x_{t-1}, y_t, \\theta) = \\log p(y_t \\mid x_{t-1}, \\theta) + \\log p(x_t \\mid x_{t-1}, \\theta) - \\log q(x_t \\mid x_{t-1}, y_t, \\theta).\n",
+    "$$\n",
+    "\n",
+    "Again, these are supplied as a single function:\n",
+    "\n",
+    "```python\n",
+    "def pf_step(x_prev, y_curr, theta, key):\n",
+    "    # claculate x_curr and logw\n",
+    "    return (x_curr, logw)\n",
+    "```\n",
+    "\n",
     "## Notation\n",
     "\n",
     "### Functions\n",
@@ -133,16 +175,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fe5c7e6c3d0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fb33311af40>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -836,6 +885,91 @@
    "source": [
     "import jax\n",
     "jax.devices()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data members"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y1 = [6.], y_2 = [6.], y_3 = [6.], y_4 = [8.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from jax.tree_util import register_pytree_node\n",
+    "\n",
+    "\n",
+    "class World:\n",
+    "    def __init__(self, p, v):\n",
+    "        self.p = p\n",
+    "        self.v = v\n",
+    "        \n",
+    "    def set_v(self, v):\n",
+    "        self.v = v\n",
+    "\n",
+    "register_pytree_node(World,\n",
+    "                    lambda x: ((x.p, x.v), None),\n",
+    "                    lambda _, tup: World(tup[0], tup[1]))\n",
+    "\n",
+    "\n",
+    "fun = jax.jit(lambda world, x: world.p + world.v + x, static_argnums=0)\n",
+    "\n",
+    "world = World(jnp.array([1.]), jnp.array([2.]))\n",
+    "x = jnp.array([3.])\n",
+    "\n",
+    "y1 = fun(world, x)\n",
+    "world.p = jnp.array([4.])\n",
+    "y2 = fun(world, x)\n",
+    "world.set_v(jnp.array([4.]))\n",
+    "y3 = fun(world, x)\n",
+    "world = World(jnp.array([1.]), jnp.array([4.]))\n",
+    "y4 = fun(world, x)\n",
+    "\n",
+    "print(\"y1 = {}, y_2 = {}, y_3 = {}, y_4 = {}\".format(y1, y2, y3, y4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Non-hashable static arguments are not supported. An error occured during a call to '<lambda>' while trying to hash an object of type <class 'dict'>, {'p': DeviceArray([1.], dtype=float64), 'v': DeviceArray([2.], dtype=float64)}. The error was:\nTypeError: unhashable type: 'dict'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/8r/t8wdg7cj2mq1fx4h1546v1y40000gn/T/ipykernel_99547/96960422.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3.\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0my1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfun2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mworld\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"v\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4.\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0my2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfun2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mworld\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Non-hashable static arguments are not supported. An error occured during a call to '<lambda>' while trying to hash an object of type <class 'dict'>, {'p': DeviceArray([1.], dtype=float64), 'v': DeviceArray([2.], dtype=float64)}. The error was:\nTypeError: unhashable type: 'dict'\n"
+     ]
+    }
+   ],
+   "source": [
+    "fun2 = jax.jit(lambda world, x: world[\"p\"] + world[\"v\"] + x, static_argnums=0)\n",
+    "\n",
+    "world = {\"p\": jnp.array([1.]), \"v\": jnp.array([2.])}\n",
+    "x = jnp.array(3.)\n",
+    "\n",
+    "y1 = fun2(world, x)\n",
+    "world[\"v\"] = jnp.array([4.])\n",
+    "y2 = fun2(world, x)\n",
+    "world = {\"p\": jnp.array([1.]), \"v\": jnp.array([4.])}\n",
+    "y3 = fun2(world, x)\n",
+    "\n",
+    "print(\"y1 = {}, y_2 = {}, y_3 = {}\".format(y1, y2, y3))"
    ]
   },
   {
