--- a/pfjax.ipynb
+++ b/pfjax.ipynb
@@ -146,7 +146,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f02787731f0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f44944b12b0>"
       ]
      },
      "execution_count": 1,
@@ -228,7 +228,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.31 s ± 19.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.35 s ± 21.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -243,14 +243,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.22 ms ± 2.76 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "401 µs ± 2.37 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
